﻿01/23/2016 1.0.0.0 - Beta
  Fixed SMP packet crash.
  Fixed potential golem hook crash.
  Added levels of interaction.
  Added golem backpack skins.

01/22/2016 1.0.0.0 - Beta
  Bumped version to 1.0.0.0
  Fixes #213: Added backpack lore and recipe.
  Added backpack config option.
  Updated mod info file.
  Fixed several SMP crashes.

01/21/2016 0.10.0.0 - Beta
  Fixed multiple issues with the Arcane assembler: GUI desync, invalid network state.
  Golem backpack pearl now responds to out-of-range and if golem is disabled(Fetter).
  Fixed issue where the last pattern on a knowledge core could not be erased.

01/19/2016 0.10.0.0 - Beta
  Cleaned up some ASM transformation code.
  Renamed model and texture of golem Addon to golem Backpack
  Fixed bug where storage bus did not work when placed after jar was placed.
  Added wifi backpack for Essentia core.
  Fixed GUI based dupe bug.

01/18/2016 0.10.0.0 - Beta
  Fixed bug where DPE would eat item stacks.
  Refactored golem network code.
  Added wifi backpack for Gather, Decanting, and Fill cores.
  Fixes #265: Restored API call and marked as deprecated.
  Fixed broken integration core.

01/17/2016 0.10.0.0 - Beta
  Cleaned up backpack render code.
  Cleaned up and documented IGolemHookHandler interface.
  Added AE network capabilities to golem backpack. 

01/16/2016 0.10.0.0 - Beta
  Work on golem hooks & sync
  Work on item and wifi backpack.
  Fixed bug: A.C.T. didn't copy item on middle click when in creative mode.

01/15/2016 0.10.0.0 - Beta
  Work on golem hooks
  Work on item and wifi backpack.
  
01/14/2016 0.10.0.0 - Beta
  Work on golem hooks
  
01/13/2016 0.10.0.0 - Beta
  Began looking into #213
  
01/11/2016 0.10.0.0 - Beta
  Fixed occasional crash when the Knowledge Inscriber GUI was clicked.
  Added locked/unlocked texture & indicator to storage monitors.
  Fixed bug where autocrafting gui didn't always show the item being crafted.
  Fixed and cleaned up some gui sync issues. (will this never end?!)
