@@ -1,4 +1,8 @@
-﻿01/23/2016 1.0.0.0 - Beta
+﻿01/24/2016 1.0.0.1 - Beta
+  Fixes #267: Wildcard damage values will no longer cause GUI crashes.
+  Added Thaumcraft's itemShard to the ore dictionary, allowing autocrafting substitutions where allowed.
+
+01/23/2016 1.0.0.0 - Beta
   Fixed SMP packet crash.
   Fixed potential golem hook crash.
   Added levels of interaction.
